# zephyr-app-scratch

./: CMakeLists.txt  README.md  prj.conf  west.yml
src/: main.c  main.cpp
